# ds-app-with-fastapi

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: devops.yml
00-concepts/: 01-generators.py
01-calculator-app/: main.py
concepts/: 00-list-comprehension.py  01-generators.py
package/subpackage/: module.py
